--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
 		"jose": "^6.0.11",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.503.0",
-		"next": "^15.3.1",
-		"next-auth": "^5.0.0-beta.28",
+		"next": "^16.0.10",
+		"next-auth": "^5.0.0-beta.30",
 		"next-themes": "^0.4.6",
 		"nextjs-toploader": "^3.9.17",
 		"react": "^19.1.0",
@@ -60,7 +60,7 @@
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
-		"eslint-config-next": "15.3.1",
+		"eslint-config-next": "^16.0.10",
 		"tailwindcss": "^4",
 		"typescript": "^5"
 	}
